# simple-calendar

./: .gitignore  README.md  cli.py  pyproject.toml
docs/: structure.md
src/comnuoc/calendar/application/: service_container.py
src/comnuoc/calendar/application/calendar/: calendar_service.py
src/comnuoc/calendar/application/event/: event_dto.py  event_service.py
src/comnuoc/calendar/application/setting/: setting_service.py
src/comnuoc/calendar/domain/event/: event.py  event_repository.py  event_serializer.py
src/comnuoc/calendar/domain/tests/util/: calendar_test.py
src/comnuoc/calendar/domain/util/: calendar.py  datetime_range.py  setting_repository.py
src/comnuoc/calendar/infrastructure/event/: event_repository.py  event_serializer.py
src/comnuoc/calendar/infrastructure/util/: setting_repository.py
src/comnuoc/calendar/presentation/cli/: application.py  calendar_formatter.py  cli.py  event_formatter.py  input_helper.py  menu_formatter.py
src/comnuoc/calendar/presentation/cli/controller/: calendar_controller.py  event_controller.py  setting_controller.py
src/comnuoc/calendar/presentation/cli/helper/: calendar_formatter.py  event_formatter.py  input_helper.py  recurrence_event_input_helper.py
